--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
